--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,6 @@ pytest-cov = "^3.0.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+page-loader = "page_loader.scripts.main:main"
