--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,11 @@ packages = [
     { include = "page_loader"},
 ]
 
-
-
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.28.1"
 requests-mock = "^1.10.0"
+beautifulsoup4 = "^4.11.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
