--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.9"
 requests = "^2.28.1"
 requests-mock = "^1.10.0"
 beautifulsoup4 = "^4.11.1"
+progress = "^1.6"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
